--- a/SpaceBunnyJump/SpaceBunnyJump/MainWindow.xaml
+++ b/SpaceBunnyJump/SpaceBunnyJump/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:SpaceBunnyJump"
         xmlns:renderer="clr-namespace:SpaceBunnyJump.Renderer"
         mc:Ignorable="d"
-        Title="SpaceBunnyJump" Height="800" Width="500" Loaded="Window_Loaded" ResizeMode="NoResize"> 
+        Title="SpaceBunnyJump" Height="800" Width="500" Loaded="Window_Loaded" ResizeMode="NoResize" KeyDown="Window_KeyDown"> 
     <Grid x:Name="grid">
         <renderer:Display x:Name="display" />
     </Grid>
